# CCDAuto

./: CCDAuto.sln
CCDAuto/: AAVSOPhotoDialog.cpp  AAVSOPhotoDialog.h  AAVSOPhotoDialog.resx  Apogee_Alta.cpp  AssemblyInfo.cpp  AstrometryWindow.cpp  AstrometryWindow.h  AstrometryWindow.resx  AstrometryWindow_backup.h  AutoFocusDialog.cpp  AutoFocusDialog.h  AutoFocusDialog.resx  BiasFrameSettingDialog.cpp  BiasFrameSettingDialog.h  CCDAuto.cpp  Canon.cpp  (+118 more)
CCDAuto/src_old/: #CameraIO_LinuxPPI.cpp#  CameraIO_Linux.cpp  Makefile  Makefile.am  Makefile.in  apogee.cpp  asthjd.c  callbacks.c  callbacks.h  ccdauto  cfortran.h  doRoutines.cpp  doRoutines.h  dtypes.h  fits.h  hbeta_hgamma_hdelta.fits  hbook.h  iformat.h  img.h  interface.c  interface.c.bak  interface.h.bak  linux_main.c  main.c  minuit.h  qjsimg.h  qjsimh.h  queue.h  sxpress.c  sxpress.h  temp_tables.h  testobj.c  truefalse.h
CCDAuto/src_old/apogee/: ApogeeLinux.h  CameraIO_Linux.cpp  apogee.h
CCDAuto/src_old/darks/: Dark1x1_3.fits
CCDAuto/src_old/flats/: Flat1x1C.fits
CCDAuto/src_old/images/: HY_gamma_1x1.fits  H_gamma_1x1.fits
CCDAuto/src_old/save/: CameraIO_Linux.cpp  Makefile  Makefile.am  Makefile.in  interface.c  main.c
CCDAuto/src_old/sbig/: README.txt  csbigimg.cpp  load_usb  sbig  sbig.usermap  sbiggcam.hex  sbigudrv.h  testapp_makefile  testmain.cpp
CCDAuto/src_old/sbig_old/: ksbigictl.h  ksbiglpt.h  ksbiglptd.h  ksbiglpthw.h  ksbiglptmain.h  ksbigusb.h  ksbigusbmain.h  lsbigcam.h  lsbiglptcam.h  lsbigusbcam.h  sbig.cpp  sbig.h  sbigdef.h  sbigudrv.h
CCDAuto/src_old/sxpress/: sxpress.h
(+182 files in other folders)
